tests/snapshots/integration__address_info_specific_blocks_details_light.snap
---
source: blockbook/tests/integration.rs
expression: address_info
---
{
  "page": 1,
  "totalPages": "[REDACTED]",
  "itemsOnPage": 1000,
  "address": "3Kzh9qAqVWQhEsfQz7zEQL1EuSx5tyNLNS",
  "balance": "[REDACTED]",
  "totalReceived": "[REDACTED]",
  "totalSent": "[REDACTED]",
  "unconfirmedBalance": "[REDACTED]",
  "unconfirmedTxs": "[REDACTED]",
  "txs": "[REDACTED]",
  "secondaryValue": null,
  "txids": null,
  "transactions": [
    {
      "txid": "67a6147be5216a0b77e87002e9911f62e2b3dcfa44ce15e8c28e39d77860c59e",
      "vsize": 223,
      "vin": [
        {
          "n": 0,
          "addresses": [
            "1LyqvGRjLoznNX2RbytTvuyswDpDVqoYt7"
          ],
          "isAddress": true,
          "value": "3084293"
        }
      ],
      "vout": [
        {
          "value": "11700",
          "n": 0,
          "spent": true,
          "addresses": [
            "3Kzh9qAqVWQhEsfQz7zEQL1EuSx5tyNLNS"
          ],
          "isAddress": true
        },
        {
          "value": "3049993",
          "n": 1,
          "spent": true,
          "addresses": [
            "1CRhnBV2q8ToQcaKMBBkeooJdNX9ohSWDc"
          ],
          "isAddress": true
        }
      ],
      "blockHash": "0000000000000000001617fb8817ecd53e1093247bcf813b2eae793033af0c0a",
      "blockHeight": 501498,
      "confirmations": "[REDACTED]",
      "blockTime": 1514513020,
      "value": "3061693",
      "valueIn": "3084293",
      "fees": "22600"
    }
  ]
}
