tests/snapshots/integration__tickers.snap
---
source: blockbook/tests/integration.rs
expression: tickers
---
{
  "ts": 1674864000,
  "rates": {
    "\"aed\"": 84783.336,
    "\"ars\"": 4282867.5,
    "\"aud\"": 32274.684,
    "\"bdt\"": 2447401.8,
    "\"bhd\"": 8703.507,
    "\"bmd\"": 23082.857,
    "\"brl\"": 117937.25,
    "\"btc\"": 1.0,
    "\"cad\"": 30791.379,
    "\"chf\"": 21293.938,
    "\"clp\"": 18614248.0,
    "\"cny\"": 156582.56,
    "\"czk\"": 505740.8,
    "\"dkk\"": 157962.92,
    "\"eth\"": 14.43425,
    "\"eur\"": 21232.443,
    "\"gbp\"": 18643.771,
    "\"hkd\"": 180742.25,
    "\"huf\"": 8293902.0,
    "\"idr\"": 345612700.0,
    "\"ils\"": 79411.266,
    "\"inr\"": 1881595.6,
    "\"jpy\"": 2998118.5,
    "\"krw\"": 28393070.0,
    "\"kwd\"": 7044.7036,
    "\"lkr\"": 8404290.0,
    "\"mmk\"": 48486224.0,
    "\"mxn\"": 433456.84,
    "\"myr\"": 97963.65,
    "\"ngn\"": 10624578.0,
    "\"nok\"": 228294.1,
    "\"nzd\"": 35566.81,
    "\"php\"": 1260220.1,
    "\"pkr\"": 5783717.5,
    "\"pln\"": 99952.24,
    "\"rub\"": 1609952.6,
    "\"sar\"": 86651.664,
    "\"sek\"": 237953.11,
    "\"sgd\"": 30321.643,
    "\"thb\"": 756436.75,
    "\"try\"": 434174.72,
    "\"twd\"": 698637.3,
    "\"uah\"": 848393.44,
    "\"usd\"": 23082.857,
    "\"vef\"": 2311.2866,
    "\"vnd\"": 541523840.0,
    "\"zar\"": 397099.03
  }
}
