tests/snapshots/integration__tx_specific.snap
---
source: blockbook/tests/integration.rs
expression: tx
---
{
  "txid": "b0714235addd08daf83b979aa35cc9ed7558efb8327b86b4d3ccacd8b0482ae1",
  "version": 2,
  "vin": [
    {
      "sequence": 4294967295,
      "txid": "a6e40e5abfe0114fcc9cc7d3ca6e8b4709e3e89782efdd4b0efade7f5815fa27",
      "txinwitness": [
        "3045022100e6bc8783be4d00222da4684b495c0e38578c72bc72d74321b776e777f430b5be02203dce27e811f0cb0b9ebad0d11d541a83344c985ec37a0273993caf582988c0a301",
        "0285b14271e50491ac26111dd42a6d9004f06a8e77355dac918c2fe7b1a7526ff0"
      ],
      "scriptSig": {
        "asm": "",
        "hex": ""
      },
      "vout": 2
    },
    {
      "sequence": 4294967295,
      "txid": "e0dd3738219f4882deeacb5a3f9c94de2421cfe16a804a928968f77bf5b6435a",
      "txinwitness": [
        "3044022036563b247efe66f50f453a6417d03bca152ad70913d7b69b29d7abcb602dd389022033f841a69c985ba457fb1c41a533fb0bce4b68a3bd42fdec60a89ab66623995901",
        "0285b14271e50491ac26111dd42a6d9004f06a8e77355dac918c2fe7b1a7526ff0"
      ],
      "scriptSig": {
        "asm": "",
        "hex": ""
      },
      "vout": 0
    }
  ],
  "vout": [
    {
      "n": 0,
      "scriptPubKey": {
        "address": "bc1qll6gq9v38t9nttwek0r5kkn0wmedz3w2gshe0a",
        "asm": "0 fff48015913acb35add9b3c74b5a6f76f2d145ca",
        "desc": "addr(bc1qll6gq9v38t9nttwek0r5kkn0wmedz3w2gshe0a)#k54tyxd5",
        "hex": "0014fff48015913acb35add9b3c74b5a6f76f2d145ca",
        "type": "witness_v0_keyhash"
      },
      "value": "32733248"
    },
    {
      "n": 1,
      "scriptPubKey": {
        "address": "bc1qux5d32u9zv0v322jrtfw0kh3d08nl60z8q964g",
        "asm": "0 e1a8d8ab85131ec8a9521ad2e7daf16bcf3fe9e2",
        "desc": "addr(bc1qux5d32u9zv0v322jrtfw0kh3d08nl60z8q964g)#f20g3jce",
        "hex": "0014e1a8d8ab85131ec8a9521ad2e7daf16bcf3fe9e2",
        "type": "witness_v0_keyhash"
      },
      "value": "10273270"
    },
    {
      "n": 2,
      "scriptPubKey": {
        "address": "bc1qxxkqkdljm7s2xnr9u47zpymp4yt0ad3df4hudm",
        "asm": "0 31ac0b37f2dfa0a34c65e57c209361a916feb62d",
        "desc": "addr(bc1qxxkqkdljm7s2xnr9u47zpymp4yt0ad3df4hudm)#mxf8kxkq",
        "hex": "001431ac0b37f2dfa0a34c65e57c209361a916feb62d",
        "type": "witness_v0_keyhash"
      },
      "value": "53902872"
    }
  ],
  "blockhash": "00000000000000000006b7e2a7110c174f21633adbe955c8f86f36699bba6716",
  "blocktime": 1669723092,
  "hash": "5eb2c13ef559e9aee53e803e6a8abcbfc7bb60830e2bb7fec1437f98f463e889",
  "confirmations": "[REDACTED]",
  "locktime": 0,
  "hex": "0200000000010227fa15587fdefa0e4bddef8297e8e309478b6ecad3c79ccc4f11e0bf5a0ee4a60200000000ffffffff5a43b6f57bf76889924a806ae1cf2124de949c3f5acbeade82489f213837dde00000000000ffffffff034078f30100000000160014fff48015913acb35add9b3c74b5a6f76f2d145caf6c19c0000000000160014e1a8d8ab85131ec8a9521ad2e7daf16bcf3fe9e2187e36030000000016001431ac0b37f2dfa0a34c65e57c209361a916feb62d02483045022100e6bc8783be4d00222da4684b495c0e38578c72bc72d74321b776e777f430b5be02203dce27e811f0cb0b9ebad0d11d541a83344c985ec37a0273993caf582988c0a301210285b14271e50491ac26111dd42a6d9004f06a8e77355dac918c2fe7b1a7526ff002473044022036563b247efe66f50f453a6417d03bca152ad70913d7b69b29d7abcb602dd389022033f841a69c985ba457fb1c41a533fb0bce4b68a3bd42fdec60a89ab66623995901210285b14271e50491ac26111dd42a6d9004f06a8e77355dac918c2fe7b1a7526ff000000000",
  "size": 402,
  "time": 1669723092,
  "vsize": 240,
  "weight": 957
}
